--- a/public/admin.html
+++ b/public/admin.html
@@ -44,7 +44,7 @@
         <div class="overview-grid main-actions-grid">
           <section class="card-box">
             <h3>Zone Editor</h3>
-            <p class="admin-hint">Set detect/count zones, then save.</p>
+            <p class="admin-hint">Draw detect/count zones. 3D mask auto-follows and all save together.</p>
             <div class="stream-canvas-wrapper">
               <video id="admin-video" muted playsinline autoplay></video>
               <canvas id="line-canvas"></canvas>
@@ -54,7 +54,9 @@
               <div class="zone-toggle-group">
                 <button id="btn-zone-detect" class="zone-toggle detect">Detect</button>
                 <button id="btn-zone-count" class="zone-toggle count active">Count</button>
-                <button id="btn-zone-ground" class="zone-toggle">Ground Quad</button>
+                <button id="btn-zone-ground" class="zone-toggle">3D Mask</button>
+                <button id="btn-zone-guides" class="zone-toggle active" type="button" title="Toggle perspective guides">Guides</button>
+                <button id="btn-zone-snap" class="zone-toggle active" type="button" title="Snap clicks to perspective guides">Snap</button>
               </div>
               <button id="btn-clear-line" class="btn-secondary">Clear</button>
               <button id="btn-save-line" class="btn-primary" disabled>Save Zones</button>
