--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
           </div>
 
           <p id="ml-hud-msg" class="ml-hud-msg">Initializing live scene scan...</p>
+          <p id="ml-hud-verbose" class="ml-hud-verbose">Scene lock scanning | retrain idle | delay --</p>
 
           <div class="ml-hud-chips">
             <span class="ml-chip">
