--- a/public/account.html
+++ b/public/account.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="/favicon.svg" />
   <link rel="stylesheet" href="/css/main.css" />
 </head>
-<body class="dark">
+<body class="dark account-page">
 
   <header class="site-header">
     <a href="/index.html" class="logo"><img src="/img/whitelinezlogo.svg" alt="WHITELINEZ" /></a>
