--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,7 @@
                 </svg>
                 Scene
               </span>
+              <span id="ml-hud-scene-icon" class="ml-chip-icon" aria-hidden="true">?</span>
               <strong id="ml-hud-profile">Scanning...</strong>
             </span>
             <span class="ml-chip">
@@ -89,9 +90,9 @@
                   <circle cx="12" cy="12" r="9"></circle>
                   <path d="M12 7v5l3 2"></path>
                 </svg>
-                Delay
+                Confidence
               </span>
-              <strong id="ml-hud-delay">Scanning...</strong>
+              <strong id="ml-hud-delay">0%</strong>
             </span>
           </div>
 
