--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
           </div>
 
           <p id="ml-hud-msg" class="ml-hud-msg">Initializing live scene scan...</p>
-          <p id="ml-hud-verbose" class="ml-hud-verbose">Scene lock scanning | retrain idle | delay --</p>
+          <p id="ml-hud-verbose" class="ml-hud-verbose">Scene lock scanning | retrain idle | scene --</p>
 
           <div class="ml-hud-chips">
             <span class="ml-chip">
@@ -79,10 +79,10 @@
                   <path d="M3 12h18"></path>
                   <path d="M12 3a14 14 0 0 1 0 18"></path>
                 </svg>
-                Scene
+                Live Objects
               </span>
-              <span id="ml-hud-scene-icon" class="ml-chip-icon" aria-hidden="true">?</span>
-              <strong id="ml-hud-profile">Scanning...</strong>
+              <span id="ml-hud-scene-icon" class="ml-chip-icon" aria-hidden="true">OBJ</span>
+              <strong id="ml-hud-profile">0</strong>
             </span>
             <span class="ml-chip">
               <span class="ml-chip-label">
