--- a/public/index.html
+++ b/public/index.html
@@ -97,15 +97,15 @@
 
           <div class="ml-hud-cells">
             <div class="ml-cell-row">
-              <span class="ml-cell-label">Confidence</span>
-              <strong id="ml-hud-conf">0%</strong>
+              <span class="ml-cell-label">Detection Rate</span>
+              <strong id="ml-hud-conf">0.0/m</strong>
               <div class="ml-cell-track">
                 <div id="ml-hud-conf-bar" class="ml-cell-fill" style="--pct:0"></div>
               </div>
             </div>
             <div class="ml-cell-row">
-              <span class="ml-cell-label">Scene Lock</span>
-              <strong id="ml-hud-scene-conf">0%</strong>
+              <span class="ml-cell-label">Crossings/min</span>
+              <strong id="ml-hud-scene-conf">0.0/m</strong>
               <div class="ml-cell-track">
                 <div id="ml-hud-scene-bar" class="ml-cell-fill" style="--pct:0"></div>
               </div>
@@ -312,3 +312,4 @@
   <script src="/js/index-init.js"></script>
 </body>
 </html>
+
