--- a/public/admin.html
+++ b/public/admin.html
@@ -747,6 +747,7 @@
   <script src="https://cdn.jsdelivr.net/npm/hls.js@1/dist/hls.min.js"></script>
   <script src="/js/config.js"></script>
   <script src="/js/supabase-init.js"></script>
+  <script src="/js/site-views.js"></script>
   <script src="/js/auth.js"></script>
   <script src="/js/stream.js"></script>
   <script src="/js/coord-utils.js"></script>
