--- a/public/index.html
+++ b/public/index.html
@@ -296,6 +296,7 @@
 
   <script src="/js/config.js"></script>
   <script src="/js/supabase-init.js"></script>
+  <script src="/js/site-views.js"></script>
   <script src="/js/auth.js"></script>
   <script src="/js/stream.js"></script>
   <script src="/js/counter.js"></script>
