--- a/public/register.html
+++ b/public/register.html
@@ -42,6 +42,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.js"></script>
   <script src="/js/config.js"></script>
   <script src="/js/supabase-init.js"></script>
+  <script src="/js/site-views.js"></script>
   <script src="/js/auth.js"></script>
   <script src="/js/register-init.js"></script>
 </body>
