--- a/public/admin.html
+++ b/public/admin.html
@@ -52,18 +52,18 @@
               <div class="stream-canvas-wrapper">
                 <video id="admin-video" muted playsinline autoplay></video>
                 <canvas id="line-canvas"></canvas>
-              </div>
-              <div class="admin-line-controls">
-                <div class="zone-toggle-group">
-                  <button id="btn-zone-detect" class="zone-toggle detect">Detect</button>
-                  <button id="btn-zone-count" class="zone-toggle count active">Count</button>
-                  <button id="btn-zone-ground" class="zone-toggle">3D Mask</button>
-                  <button id="btn-zone-guides" class="zone-toggle active" type="button" title="Toggle perspective guides">Guides</button>
-                  <button id="btn-zone-snap" class="zone-toggle active" type="button" title="Snap clicks to perspective guides">Snap</button>
+                <div class="admin-line-controls">
+                  <div class="zone-toggle-group">
+                    <button id="btn-zone-detect" class="zone-toggle detect">Detect</button>
+                    <button id="btn-zone-count" class="zone-toggle count active">Count</button>
+                    <button id="btn-zone-ground" class="zone-toggle">3D Mask</button>
+                    <button id="btn-zone-guides" class="zone-toggle active" type="button" title="Toggle perspective guides">Guides</button>
+                    <button id="btn-zone-snap" class="zone-toggle active" type="button" title="Snap clicks to perspective guides">Snap</button>
+                  </div>
+                  <button id="btn-clear-line" class="btn-secondary" type="button">Clear</button>
+                  <button id="btn-save-line" class="btn-primary" type="button" disabled>Save Zones</button>
+                  <span id="line-status" class="line-status"></span>
                 </div>
-                <button id="btn-clear-line" class="btn-secondary">Clear</button>
-                <button id="btn-save-line" class="btn-primary" disabled>Save Zones</button>
-                <span id="line-status" class="line-status"></span>
               </div>
             </div>
 
